Hide Launcher app search box when empty

BUG=661380
TEST=Open launcher, type a search that returns no app results.  The
horizontal box that usually contains app results should be hidden.

Review-Url: https://codereview.chromium.org/2473033002
Cr-Commit-Position: refs/heads/master@{#433686}

Former-commit-id: 32247f5271fd583a683bc8dc2e4c07ce3cf72b85