ui/app_list/views/search_result_tile_item_list_view.cc
@@ -14,12 +14,14 @@
 #include "ui/views/background.h"
 #include "ui/views/border.h"
 #include "ui/views/controls/textfield/textfield.h"
-#include "ui/views/layout/grid_layout.h"
+#include "ui/views/layout/box_layout.h"
 
 namespace {
 
 // Layout constants.
 const size_t kNumSearchResultTiles = 8;
+const int kHorizontalBorderSpacing = 1;
+const int kBetweenTileSpacing = 2;
 const int kTopBottomPadding = 8;
 
 }  // namespace
@@ -30,14 +32,9 @@ SearchResultTileItemListView::SearchResultTileItemListView(
     views::Textfield* search_box,
     AppListViewDelegate* view_delegate)
     : search_box_(search_box) {
-  views::GridLayout* layout = new views::GridLayout(this);
-  SetLayoutManager(layout);
-  views::ColumnSet* column_set = layout->AddColumnSet(0);
-  for (size_t i = 0; i < kNumSearchResultTiles; ++i) {
-    column_set->AddColumn(views::GridLayout::FILL, views::GridLayout::FILL, 1,
-                          views::GridLayout::USE_PREF, 0, 0);
-  }
-  layout->StartRow(0, 0);
+  SetLayoutManager(new views::BoxLayout(views::BoxLayout::kHorizontal,
+                                        kHorizontalBorderSpacing, 0,
+                                        kBetweenTileSpacing));
 
   for (size_t i = 0; i < kNumSearchResultTiles; ++i) {
     SearchResultTileItemView* tile_item =
@@ -46,7 +43,7 @@ SearchResultTileItemListView::SearchResultTileItemListView(
     tile_item->SetBorder(
         views::CreateEmptyBorder(kTopBottomPadding, 0, kTopBottomPadding, 0));
     tile_views_.push_back(tile_item);
-    layout->AddView(tile_item);
+    AddChildView(tile_item);
   }
 }
 
